syntax = "proto3";

option csharp_namespace = "ValidationServers.Date";

package date;

message ResultReply {
  bool result=1;
  string info=2;
}

message ValidationDateRequest {
  string name = 1;
}
message ValidationDateReply {
  string message = 1;
}

service ValidationDate {
  rpc ValidateDate(ValidationDateRequest) returns(ValidationDateReply);
}